Oanh upcode ngày nhận hàng

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -116,7 +116,7 @@
                                             data-bs-toggle="modal"
                                             data-bs-dismiss="modal"
                                             data-bs-target="#add-variant-modal"
-                                            id="add-variant"><span class="">Thêm thuộc tính tùy chỉnh</span>
+                                            id="add-variant"><span class="">Thêm biến thể</span>
                                     </button>
                                 </div>
                                 <input type="text" id="search-variant"
@@ -156,7 +156,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Tạo thuộc tính tùy chỉnh</h5>
+                        <h5 class="modal-title">Tạo thuộc tính biến thể</h5>
                         <button type="button" class="btn-close"
                                 data-bs-dismiss="modal"
                                 aria-label="Close"></button>
@@ -254,7 +254,7 @@
                                data-bs-toggle="collapse"
                                data-bs-target="#variant"
                                aria-controls="variant">
-                            Thuộc tính tùy chỉnh
+                            Thuộc tính biến thể
                         </label>
                     </h2>
                     <div id="variant" class="accordion-collapse collapse overflow-auto"
