--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/search_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/search_invoice.html
@@ -27,32 +27,33 @@
     }
 </style>
 <div class="container-xl">
-<section>
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-style1">
-            <li class="breadcrumb-item">
-                <a href="/client">Trang chủ</a>
-            </li>
-            <li class="breadcrumb-item active">Đơn hàng</li>
-        </ol>
-    </nav>
-</section>
-<section class="mt-4 ">
-    <div class="text-center">
-        <h4 class="fw-bold">Kiểm tra đơn hàng của bạn</h4>
+    <section>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb breadcrumb-style1">
+                <li class="breadcrumb-item">
+                    <a href="/client">Trang chủ</a>
+                </li>
+                <li class="breadcrumb-item active">Đơn hàng</li>
+            </ol>
+        </nav>
+    </section>
+    <section class="mt-4 ">
         <div class="text-center">
-            <form th:action="@{/search_order_user}" method="get">
-                <input type="text" class="form-control w-px-500 d-inline" id="search_invoice" placeholder="HD93849" th:name="search">
-                <p class="text-danger" th:if="${errorSearch!=''}">[(${errorSearch})]</p>
-                <button class="btn btn-danger">Tìm kiếm</button>
-            </form>
+            <h4 class="fw-bold">Kiểm tra đơn hàng của bạn</h4>
+            <div class="text-center">
+                <form th:action="@{/search_order_user}" method="get">
+                    <input type="text" class="form-control w-px-500 d-inline" id="search_invoice" placeholder="HD93849"
+                           th:name="search">
+                    <p class="text-danger" th:if="${errorSearch!=''}">[(${errorSearch})]</p>
+                    <button class="btn btn-danger">Tìm kiếm</button>
+                </form>
+            </div>
         </div>
-    </div>
-</section>
-<section class="mt-4 text-center">
+    </section>
+    <section class="mt-4 text-center" th:if="${session.user==null}">
     <span class="text-uppercase w-auto p-3 px-5 fw-bold">
           <a class="card-text  text-decoration-underline" href="/login">
         Đăng nhập</a> để quản lý đơn hàng và có trải nghiệm tốt hơn
     </span>
-</section>
+    </section>
 </div>
