--- a/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/dashboard/dashboard.html
@@ -1,7 +1,4 @@
-<h4 class="fw-semibold py-3 mb-4"> Thống kê đơn hàng theo ngày :
-    <br>
-    <br>
-    <input type="date" id="date" class="form-control w-px-200" th:value="${date}">
+<h4 class="fw-semibold py-3 mb-4"> Thống kê :
 </h4>
 
 <div class="row">
