--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -111,6 +111,7 @@
                                         <div th:each="billCheckStill:${listBillFilterStill}"
                                              th:if="${billCheckStill.id - bill.id ==0}">
                                             <h4 style="color: black" class="px-3"> Thông tin trả hàng</h4>
+                                            <p class="text-danger">(*)Lưu ý mỗi đơn hàng  chỉ được trả hàng một lần!</p>
                                             <div class="table-responsive text-nowrap">
                                                 <table class="table table-bordered">
                                                     <thead>
