--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -74,6 +74,7 @@
                                         </div>
                                         <div th:if="${session.bool==true}">
                                             <h4 style="color: black" class="px-3"> Thông tin trả hàng</h4>
+                                            <p class="text-danger">(*)Lưu ý mỗi đơn hàng  chỉ được trả hàng một lần!</p>
                                             <div class="table-responsive text-nowrap">
                                                 <table class="table table-bordered">
                                                     <thead>
