oanh up code hiển thị giá hóa đơn

--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -97,7 +97,7 @@
             </ul>
         </li>
         <li class="menu-header small text-uppercase">
-            <span>Other</span>
+            <span>Khác</span>
         </li>
         <li class="menu-item">
             <a class="menu-link" href="/">
