--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -35,7 +35,7 @@
                                 <input type="text" id="search-input"
                                        class="form-control"
                                        onkeyup="myFunction()" autocomplete="off"
-                                       placeholder="Enter Name">
+                                       placeholder="Nhập tên thuộc tính ">
                             </div>
                         </div>
                         <div class="row g-2">
@@ -122,7 +122,7 @@
                                 <input type="text" id="search-variant"
                                        class="form-control"
                                        onkeyup="searchVariant()" autocomplete="off"
-                                       placeholder="Enter Name">
+                                       placeholder="Nhập tên thuộc tính">
                             </div>
                         </div>
                         <div class="row g-2">
