--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/invoice_return.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/invoice_return.html
@@ -40,8 +40,8 @@
                     </tr>
                     </thead>
                     <tbody class="table-border-bottom-0 text-left">
-                    <tr th:each="billReturn : ${listBill}">
-                        <td>1</td>
+                    <tr th:each="billReturn,billIndex : ${listBill}">
+                        <td>[(${billIndex.index+1})]</td>
                         <td>[(${billReturn.code})]</td>
                         <td>[(${billReturn?.deliveryNotes[0].received})]</td>
                         <td>
