--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
@@ -482,7 +482,7 @@
                     if ((minimumValue.value.trim() == "") || (value.value <= 0)) {
                         $(minimumValue).parent().siblings('.minimumValueloc').first().html("<i class='bx bx-x-circle' style='color:#ff0000' ></i> Giá trị không được để trống và phải lớn hơn 0!");
                         status.push(false);
-                    } else if (minimumValue.value > value.value) {
+                    } else if (minimumValue.value < value.value) {
                         $(minimumValue).parent().siblings('.minimumValueloc').first().html("<i class='bx bx-x-circle' style='color:#ff0000' ></i> Giá trị tối thiểu phải nhỏ hơn giá trị giảm!");
                         status.push(false);
                     } else {
