--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -105,13 +105,8 @@
                                                     aria-label="Close"></button>
                                         </div>
                                         <input type="text" th:value="${bill.id}" class="id" hidden="hidden">
-                                        <div th:each="billCheck:${listBillCheck}" th:if="${billCheck.id - bill.id ==0}">
-                                            <h4 class="text-center">Đơn hàng của bạn đã không còn sản phẩm nào được trả</h4>
-                                        </div>
-                                        <div th:each="billCheckStill:${listBillFilterStill}"
-                                             th:if="${billCheckStill.id - bill.id ==0}">
+                                        <div>
                                             <h4 style="color: black" class="px-3"> Thông tin trả hàng</h4>
-                                            <p class="text-danger">(*)Lưu ý mỗi đơn hàng  chỉ được trả hàng một lần!</p>
                                             <div class="table-responsive text-nowrap">
                                                 <table class="table table-bordered">
                                                     <thead>
