oanh commit code

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -286,7 +286,7 @@
 <div class="card mb-4">
     <div class="card-header">
         <div class="card-title">
-            <h5>Sản phẩm tùy chỉnh</h5>
+            <h5>Sản phẩm biến thể</h5>
         </div>
     </div>
     <div class="card-body" id="detail-pro">
