--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card-body table-responsive">
-                <table class="table table-hover text-center" id="table-all-product">
+                <table class="table table-hover" id="table-all-product">
                     <caption class="ms-4">
                         Từ [(${listProduct.number * listProduct.size +1})] đến [(${(listProduct.number*
                         listProduct.size)+listProduct.numberOfElements})]
