--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product_detail.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product_detail.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="card-body table-responsive">
-                <table class="table table-hover text-center" id="table-all-product">
+                <table class="table table-hover" id="table-all-product">
                     <caption class="ms-4">
                         Từ [(${listProductDetail.number * listProductDetail.size +1})] đến [(${(listProductDetail.number
                         *
