--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -146,7 +146,7 @@
                                                     <option value="-1">Chưa chọn voucher</option>
                                                     <option th:value="${voucher.voucher.id}"
                                                             th:each="voucher:${listVoucher}"
-                                                            th:if="${voucher.active==true}">[(${voucher.voucher.code})]
+                                                            th:if="${voucher.active  == true && voucher.voucher.active==true}">[(${voucher.voucher.code})]
                                                     </option>
                                                 </select>
                                                 <div class="mt-2">
