--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
@@ -45,18 +45,6 @@
                                     <span class="col text-start"><b>Giá khuyến mãi:</b></span>
                                     <span class="col text-end"> [(${#numbers.formatDecimal(billProduct.price-billProduct.reducedMoney, 0,'COMMA',0,'POINT')})]<u>đ</u></span>
                                 </div>
-                                <div class="row mb-4 justify-content-between text-success" th:if="${billProduct.status==3}">
-                                    <span class="col text-start"><b>Trả hàng thành công:</b></span>
-                                    <span class="col text-end"> [(${billProduct.quantityAcceptReturn})]</span>
-                                </div>
-                                <div class="row mb-4 justify-content-between text-danger" th:if="${billProduct.status==1}">
-                                    <span class="col text-start"><b>Số lượng yêu cầu trả:</b></span>
-                                    <span class="col text-end"> [(${billProduct.quantityRequestReturn})]</span>
-                                </div>
-                                <div class="row mb-4 justify-content-between text-danger" th:if="${billProduct.status==2}">
-                                    <span class="col text-start"><b>Không chấp nhận trả hàng:</b></span>
-                                    <span class="col text-end"> [(${billProduct.quantityRequestReturn})]</span>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -70,6 +58,13 @@
                                 data-bs-target="#navs-top-info-customer" aria-controls="navs-top-home"
                                 aria-selected="true">
                             Thông tin phiếu giao
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="nav-link " role="tab" data-bs-toggle="tab"
+                                data-bs-target="#navs-billReturn-info" aria-controls="navs-top-home"
+                                aria-selected="true">
+                           Lịch sử trả hàng
                         </button>
                     </li>
                 </ul>
@@ -166,6 +161,71 @@
                                 </table>
                             </div>
                         </form>
+                    </div>
+                    <div class="tab-pane fade" id="navs-billReturn-info" role="tabpanel">
+                        <div class="row mb-3" th:each="historyDto : ${listHistoryReturn}">
+                            <div>Lần [(${historyDto.returnTimes})]
+                                <div class="table-responsive text-nowrap">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                        <tr>
+                                            <th>Ảnh</th>
+                                            <th>Tên sản phẩm</th>
+                                            <th>Số lượng yêu cầu trả</th>
+                                            <th>Số lượng đồng ý trả</th>
+                                            <th>Lí do</th>
+                                            <th>Ghi chú</th>
+                                            <th>Ảnh trả hàng</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr th:each="historyBillreturn :${historyDto.historyBillProductList}">
+                                            <td>
+                                                <div th:each="image:${historyBillreturn?.billProduct?.product?.listImage}">
+                                                    <img th:if="${image.location == true}"
+                                                         th:src="@{'/image/product/'+${image.link}}"
+                                                         alt="" width="100px">
+                                                </div>
+                                            </td>
+                                            <td class="flex-wrap">
+                                                [(${historyBillreturn?.billProduct?.product?.product?.nameProduct})]
+                                                ,[
+                                                <span th:each="field:${historyBillreturn?.billProduct.product.fieldList}">[(${field.value})]</span>
+                                                ]
+                                            </td>
+                                            <td>
+                                                [(${historyBillreturn?.quantityRequestReturn})]
+                                            </td>
+                                            <td>
+                                                [(${historyBillreturn?.quantityAcceptReturn})]
+                                            </td>
+                                            <td>
+                                                [(${historyBillreturn?.reason})]
+                                            </td>
+                                            <td>
+                                                [(${historyBillreturn?.note})]
+                                            </td>
+                                            <td>
+                                                <ul class="list-unstyled users-list avatar-group m-0 d-flex align-items-center">
+                                                    <li data-bs-toggle="tooltip"
+                                                        data-popup="tooltip-custom"
+                                                        data-bs-placement="bottom"
+                                                        class="avatar avatar-xl pull-up border-dark border"
+                                                        data-bs-offset="0,4" data-bs-html="true"
+                                                        title=""
+                                                        th:each="image:${historyBillreturn.listImage}">
+                                                        <img th:src="@{'/image/product/'+${image.nameImage}}"
+                                                             alt="Avatar"
+                                                             class="image-preview">
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
